# advent_of_code

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  README.md  constants.py  pyproject.toml
.github/workflows/: python-app.yml
advent_of_code/day19/: constants.py  data_loading.py  experiment.py  game.py  input.txt  simulation.py
advent_of_code/day19/agent/: actor.py  critic.py  replay_buffer.py  td3_agent.py
advent_of_code/day19/env/: action.py  blueprint.py  constants.py  environment.py  observation.py  state.py  utils.py
advent_of_code/day19/env/rendering/: renderer.py
advent_of_code/day19/env/rendering/scene_components/: grid.py  icons.py  indicators.py  scene_component.py
day19/: __init__.py  constants.py  data_loading.py  memory.py  state.py  walker.py
day19/old_solution/: actions.py  blueprint.py  data_loading.py  main.ipynb  main.py  state.py  walker.py
day19/rl/: data_loading.py  experiment.py  game.py  simulation.py
day19/rl/agent/: actor.py  base_neural_network.py  critic.py  replay_buffer.py  rl_agent.py  td3_agent.py
day19/rl/env/: action.py  blueprint.py  blueprints.py  constants.py  environment.py  observation.py  rendering.py  state.py  utils.py
day19/rl/env/rendering/: colors.py  renderer.py
day19/rl/env/rendering/scene_components/: grid.py  icons.py  indicators.py  scene_component.py
day19/tests/unit/agent/: test_critic.py
day19/tests/unit/env/: test_environment.py
docs/: conf.py  index.rst
tests/e2e/agent/: test_critic.py
tests/integration/agent/: test_critic.py
tests/unit/env/: test_environment.py
utils/: pre-commit
