[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = ["Jan Kapala <jan.kapala@ocado.com>"]
readme = "README.md"
packages = [{include = "advent_of_code"}]

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.6.2"
pandas = "^1.5.2"
numpy = "^1.24.1"
tensorboard = "^2.11.0"
pylint = "^2.15.10"
black = "^22.12.0"
mypy = "^0.991"
notebook = "^6.5.2"
jupyter = "^1.0.0"
torch = "^1.13.1"
gymnasium = "^0.27.0"
tqdm = "^4.64.1"
pygame = "^2.1.2"
isort = "^5.11.4"
pytest = "^7.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

